Overflow fix

--- a/src/global.css
+++ b/src/global.css
@@ -1,5 +1,3 @@
-body,
-#root {
-  height: calc(100vh - 64px);
-  overflow: hidden;
+body {
+    overflow: hidden;
 }
